src/css/style.css
@import url(http://fonts.googleapis.com/css?family=Smokum);


@font-face {
    font-family: 'bleeding_cowboysregular';
    src: local('Bleeding Cowboys'), 
        url('../fonts/bleeding_cowboys-webfont.ttf') format('truetype'),
         url('../fonts/bleeding_cowboys-webfont.woff') format('woff'),
         url('../fonts/bleeding_cowboys-webfont.svg#bleeding_cowboysregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'mildeastmedium';
    src: url('../fonts/mildeast-webfont.eot');
    src: url('../fonts/mildeast-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/mildeast-webfont.woff') format('woff'),
         url('../fonts/mildeast-webfont.ttf') format('truetype'),
         url('../fonts/mildeast-webfont.svg#mildeastmedium') format('svg');
    font-weight: normal;
    font-style: normal;
}

img {
    max-width: 100%;
}

html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
body {
    padding-top: 50px;
    background-color: #f5f5f5;
}

.help-overlay-hint {
    color: white;
    margin-top: 15px;
    margin-right: 50px;
    font-weight: bold;
    text-shadow: 1px 1px 1px blue;
}

#helpOverlay, #introOverlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    background-color: rgba(255,255,255,0.5);
    z-index: 10;
}

#helpOverlay .help-hint, #introOverlay .help-hint {
    position: absolute;
    padding: 10px;
    text-shadow: #ccc 2px 2px 1px;

    border: 1px solid black;
    background-color: white;
    border-radius: 5px;
}
#helpOverlay .help-hint p {
    font-size: 20px;
    font-style: italic;
}

#introOverlay .carousel {
    height: 80%;
    margin: 100px;
    border: 1px solid #333;
    border-radius: 5px;
    background-color: #eee;
    padding: 10px;
    box-shadow: 5px 5px 10px #555;
}
#introOverlay .carousel > .close-button {
    position: absolute;
    top: 10px;
    right: 10px;
    line-height: 30px;
    text-align: center;
    font-size: 30px;
    border: 1px solid #aaa;
    color: #555;
}

#introOverlay .carousel-inner, #introOverlay .carousel-inner .item {
    height: 100%;
}
#introOverlay .carousel-inner .item .centered {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    width: auto;
    height: 200px;
    font-size: 30px;
    text-align: center;
    text-shadow: 1px 1px 2px #888;
}
#introOverlay .carousel-inner .item:first-child .centered {
    height: 100px;
}
#introOverlay .carousel-inner .item .centered.large {
    height: 300px;
}
#introOverlay .carousel-inner .item .centered img {
    max-width: 100%;
}

.navbar-brand {
    font-family: bleeding_cowboysregular;
    font-size: 30px;
}

.navbar-header {
    overflow: hidden;
}

#wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
    position: relative;
}

#footer {
    height: 60px;
    background-color: #333;
    padding-top: 20px;
    border-top: 1px solid #555;
}

#footer .credit {
    padding-left: 20px;
}

.screenpane {
    height: 100%;
    padding-top: 10px;
}

.screenpane h2 {
    width: 200px
}

.screenpane .well {
    width: 100%;
    height: 98%;
    position: relative;
}

.screenpane .well .fullsize-content {
    position: absolute;
    bottom: 19px;
    top: 8.8em;
    right: 19px;
    left: 19px;
}

.main {
    height: 100%; 
    width: 100%;
    min-height: 100%;
    position: absolute;
    top: 0;
    margin: 0;
    padding-bottom: 60px;
}
.main .main-inner {
    height: 100%; 
    width: 100%;
    min-height: 100%;
}

.log {
    padding-right: 0;
}

.log #serverlog_container {
    width: 100%;
    height: 100%;
    position: relative;
}

.log #serverlog {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0px;
    border: 1px solid #ccc;
    padding: 10px;
    background-color: #ddd;
    overflow-y: scroll;
    font-family: courier;
}

#log_players {
    overflow-y: scroll;
    height: 100%;
}

#log_players .list-group-item-text pre {
    -webkit-touch-callout: text;
    -webkit-user-select: text;
    -khtml-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    user-select: text;
}

.game #gamecontainer {
    border: 1px solid #ccc;
    cursor: hand;
    cursor: grab;
    cursor: -moz-grab;
    cursor: -webkit-grab;
}
.game #gamecontainer.dragging {
    cursor: grabbing;
    cursor: -moz-grabbing;
    cursor: -webkit-grabbing;
}

.game #gamecoordinates {
    position: absolute;
    bottom: 30px;
    right: 40px;
    color: #0f0;
}

.game h2.center-block {
    font-family: bleeding_cowboysregular;
    font-size: 40px;
    width: 240px;
}

.code {
    padding-left: 0;
}

.code .alert {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 999;
    margin-bottom: 0;
}
.code .alert.alert-danger {
    border: 1px solid red;
}

.code #codeditor {
    width: 100%;
    height: 100%;
}

#usernamebox {
    margin-top: 10px;
    width: 150px;
}
#usernameboxbtn {
    margin-top: 10px;
}

.playeccr_log pre {
    -webkit-transition: opacity 0.4s ease-in;  
    -moz-transition: opacity 0.4s ease-in;  
    -o-transition: opacity 0.4s ease-in;  
    transition: opacity 0.4s ease-in;  
}


/* Bootstrap overrides */

.well {
    background-color: #fff;
    border: 1px solid #e3e3e3;
}

.nav .badge {
    /*background-color: #428bca;*/
}

.tab-content {
    padding: 10px;
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
}


/* Helper Classes */

.loading {
    background-image: url(../img/loading.gif);
    background-repeat: no-repeat;
    background-position: 50%;
    /*height:  100%;*/
}

.loading *:not(.loading-overlay) {
    opacity: 0.8;
    -webkit-transition: opacity 0.4s ease-in;  
    -moz-transition: opacity 0.4s ease-in;  
    -o-transition: opacity 0.4s ease-in;  
    transition: opacity 0.4s ease-in;  
}
.loading-overlay {
    background-color: white
    opacity: 0.8;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.loading-failed {
    background-image: url(../img/error.png);
    background-repeat: no-repeat;
    background-position: 50%;
}

.loading-failed *:not(.loading-failed-overlay) {
    opacity: 0.8;
    -webkit-transition: opacity 0.4s ease-in;  
    -moz-transition: opacity 0.4s ease-in;  
    -o-transition: opacity 0.4s ease-in;  
    transition: opacity 0.4s ease-in;  
}

.loading-failed .mp-loading-failed-overlay {
    margin: 0 auto;
    width:  100%;
    text-align: center;
    margin-top:  2em;
}

